updated: color names and dark theme in genPI

--- a/choosecar.html
+++ b/choosecar.html
@@ -277,7 +277,7 @@
             <div class="relative mt-1 w-44">
               <select
                 name="searchMake"
-                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 pl-2 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:border-dark-grey-six dark:text-dark-grey-four-color"
+                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
               >
                 <option value="" class="text-grey-six text-sm">
                   20 Rows Displayed
@@ -307,7 +307,7 @@
             <div class="relative mt-1 w-44">
               <select
                 name="searchMake"
-                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1.5 pl-2 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:border-dark-grey-six dark:text-dark-grey-four-color"
+                class="appearance-none text-sm text-grey-four w-full border border-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none dark:bg-dark-background-color dark:border-dark-grey-six dark:text-dark-grey-four-color"
               >
                 <option value="" class="text-grey-six text-sm">Sort By</option>
                 <option value="P">Pakistan</option>
@@ -338,7 +338,7 @@
         <div class="overflow-x-auto w-full mt-3">
           <table class="min-w-full divide-y divide-gray-200">
             <thead
-              class="bg-gray-50 dark:bg-[#151B23] dark:border dark:border-dark-grey-six"
+              class="bg-gray-50 dark:bg-table-dark-head dark:border dark:border-dark-grey-six"
             >
               <tr>
                 <!-- 1: Select All Checkbox -->
@@ -423,7 +423,7 @@
             </thead>
             <tbody
               id="car-table-body"
-              class="bg-white divide-y divide-gray-200 dark:bg-[#262C36] dark:border dark:border-dark-grey-six dark:divide-grey-four"
+              class="bg-white divide-y divide-gray-200 dark:bg-table-dark-body dark:border dark:border-dark-grey-six dark:divide-grey-four"
             >
               <!-- Example Row 1 start -->
               <tr class="transition-colors duration-200 dark:text-white">
