--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
 
     <!-- Content Section -->
     <div class="bg-grey-eight dark:bg-dark-background-color px-4 py-2">
-      <p class="text-[24px] text-grey-two dark:text-dark-grey-two font-bold">
+      <p class="text-[24px] text-grey-two dark:text-grey-six font-bold">
         Import Your Car
       </p>
-      <p class="text-base text-grey-two dark:text-dark-grey-two font-normal">
+      <p class="text-base text-grey-two dark:text-grey-six font-normal">
         Fast. Reliable. Hassle-Free Vehicle Shipping.
       </p>
 
