updated: advanced estimate

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <p
                   class="text-sm text-grey-four dark:text-dark-grey-four-color"
                 >
-                  Max Year
+                  Max Price
                 </p>
                 <input
                   type="text"
@@ -362,6 +362,68 @@
                     class="appearance-none text-sm text-grey-four dark:text-dark-grey-four-color w-full border border-grey-six dark:border-dark-grey-six py-1 px-4 rounded cursor-pointer focus:border-grey-six focus:outline-none bg-grey-eight dark:bg-dark-background-color"
                   >
                     <option value="" class="text-grey-six text-sm">1970</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
+                    <option value="P">Pakistan</option>
                     <option value="P">Pakistan</option>
                   </select>
 
