updated: remove warnings from generatePI

--- a/generatePi.html
+++ b/generatePi.html
@@ -382,7 +382,7 @@
                   >
                     <tr class="align-top dark:text-white">
                       <td
-                        class="px-2 py-2 font-normal align-middle text-base border-b border-b-grey-six dark:border-b-dark-grey-six dark:border-b-dark-grey-six"
+                        class="px-2 py-2 font-normal align-middle text-base border-b border-b-grey-six dark:border-b-dark-grey-six"
                         rowspan="2"
                       >
                         Iquique
