--- a/generatePi.html
+++ b/generatePi.html
@@ -1730,7 +1730,7 @@
 
           <!-- Step 5 -->
           <a
-            href="#"
+            href="./confirmPI.html"
             class="flex flex-row items-center gap-x-1.5 cursor-pointer"
             data-step="5"
           >
