--- a/confirmPI.html
+++ b/confirmPI.html
@@ -467,7 +467,7 @@
             data-step="5"
           >
             <div
-              class="rounded-full bg-primary-color dark:bg-dark-primary-color dark:text-white border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six dark:text-[#3a3b3c]"
+              class="rounded-full bg-primary-color dark:bg-dark-primary-color dark:text-white border border-grey-six dark:border-dark-grey-six h-6 w-6 flex items-center justify-center text-grey-six"
             >
               <p class="text-sm">5</p>
             </div>
