added: Customer And Condition Section

--- a/confirmPI.html
+++ b/confirmPI.html
@@ -364,8 +364,293 @@
             </tbody>
           </table>
         </div>
-
         <!-- Table of cars ends here -->
+
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-3 pt-4">
+          <!-- Customer Summary Section Start -->
+          <div
+            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2"
+          >
+            <p
+              class="text-grey-two font-semibold pb-2 border-b border-b-[#e8e7e7] dark:text-cyan-50"
+            >
+              Customer
+            </p>
+            <div class="flex flex-col xl:flex-row gap-x-3 mt-2">
+              <div class="w-full">
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Name
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Arturo Franco Souza
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Email
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    mcarthur017@hotmail.com
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Entity Type
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Unset
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    TIN
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    -
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Date of Birth
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    1880/2/2
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Tel
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    +595971451419
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Address
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Sebastian de Yegros N208 c/calle 14
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Country
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Paraguay
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    City
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    SAN ESTANISLAO
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Customer Summary Section End -->
+
+          <!-- Condition Starts Here -->
+          <div
+            class="bg-white dark:bg-[#262C36] w-full rounded border border-grey-six px-3 py-2"
+          >
+            <p
+              class="text-grey-two font-semibold pb-2 border-b border-b-[#e8e7e7] dark:text-cyan-50"
+            >
+              Condition
+            </p>
+            <div class="flex flex-col xl:flex-row gap-x-3 mt-2">
+              <div class="w-full">
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Country
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Chillie
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    PORT
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    Iquique
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Price Quotation
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    CIF
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Shipping Method
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    RoRo
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Delivery To
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    -
+                  </p>
+                </div>
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Discount
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    -
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Adjustment
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    -
+                  </p>
+                </div>
+
+                <div
+                  class="flex justify-between border-b border-b-[#e8e7e7] pb-2 mt-2"
+                >
+                  <p
+                    class="w-full text-grey-two font-medium text-[15px] dark:text-dark-grey-four-color"
+                  >
+                    Promotion Code
+                  </p>
+                  <p
+                    class="w-full text-[15px] text-grey-two font-light dark:text-dark-grey-four-color"
+                  >
+                    -
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Condition Ends Here -->
+
+          <!-- Consignee Information starts-->
+          
+          <!-- Consignee Information Ends -->
+        </div>
       </div>
     </div>
 
